<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/admintext"
            android:layout_width="match_parent"
            android:text="@string/admin_login_page"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:elevation="10dp"
            android:layout_marginTop="-10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />

        <ImageView
            android:id="@+id/adminvector"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/adminloginvector"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/username_vector"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="#CCAAAAAA"
            android:textSize="20sp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="18dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:background="@drawable/rounded_corner"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#CCAAAAAA"
            android:textSize="20sp"
            android:drawableLeft="@drawable/password_vector"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="18dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="@drawable/rounded_corner"
            />

        <Button
            android:id="@+id/loginbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="18dp"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            />

        <TextView
            android:id="@+id/notyetadmin"
            android:layout_width="match_parent"
            android:text="@string/not_yet_an_admin_become_one"
            android:gravity="center"
            android:textSize="27sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            />

        <Button
            android:id="@+id/account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="18dp"
            android:textSize="25sp"
            android:layout_marginTop="1dp"
            android:backgroundTint="@color/black"
            />


    </LinearLayout>



</RelativeLayout>