<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/creatAdminAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account">

        </TextView>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="18dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:background="@drawable/rounded_corner"
            />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:padding="10dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:background="@drawable/rounded_corner"
            android:hint="@string/first_name"
            >

        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_corner"
            android:hint="Surname"
            >

        </EditText>



    </LinearLayout>

</RelativeLayout>